Migrate from URL to URI constructor because URL constructors are deprecated.